Arreglado Bug que borraba Avatar Default(una garcha) Cambios en el WebApi, Register funcionando.

--- a/EduClass.Web/Views/Menu/_menuTop.cshtml
+++ b/EduClass.Web/Views/Menu/_menuTop.cshtml
@@ -2,7 +2,7 @@
 @using EduClass.Entities
 
 <div class="logopanel">
-    <h2><a href="index.html">Edu.Class</a></h2>
+    <h2><a href="@Url.Action("Index","Board")">Edu.Class</a></h2>
 </div><!-- logopanel -->
 
 <div class="headerbar">
