--- a/EduClass.Web/Views/Groups/Index.cshtml
+++ b/EduClass.Web/Views/Groups/Index.cshtml
@@ -29,7 +29,7 @@
                 </div><!-- people-options -->
 
                 <div class="table-responsive">
-                    <table class="table table-striped nomargin table-primary">
+                    <table class="table table-bordered table-primary nomargin">
                         <thead>
                             <tr>
 
