--- a/EduClass.Web/Views/Menu/_menuVertical.cshtml
+++ b/EduClass.Web/Views/Menu/_menuVertical.cshtml
@@ -10,6 +10,7 @@
         <li><a href="@Url.Action("Index", "Events")"><i class="fa fa-calendar"></i> <span>Eventos</span></a></li>
         <li><a href="@Url.Action("Index", "Pages")"><i class="fa fa-weibo"></i> <span>Páginas Publicas</span></a></li>
         <li><a href="@Url.Action("Index", "Tests")"><i class="fa fa-paperclip"></i> <span>Pruebas Diagnosticas</span></a></li>
+        <li><a href="@Url.Action("Index", "Califications")"><i class="fa fa-sort-numeric-asc"></i> <span>Calificaciones</span></a></li>
     </ul>
 
    
