--- a/EduClass.Web/Views/FilesLibrary/Index.cshtml
+++ b/EduClass.Web/Views/FilesLibrary/Index.cshtml
@@ -11,32 +11,35 @@
         <div class="well well-asset-options clearfix">
             <div class="btn-toolbar btn-toolbar-media-manager pull-left" role="toolbar">
                 <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default"><i class="fa fa-share"></i> Compartir</button>
+                @using (Html.BeginForm("ShareMoreFiles", "FilesLibrary", FormMethod.Post, htmlAttributes: new { @Id = "frmShareFiles" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <input id="seleccionados" name="seleccionados" hidden />
+                    <button id="compartirArchivos" type="submit" class="btn btn-default"><i class="fa fa-share"></i> Compartir</button>
+                    
+                }
                     <button type="button" class="btn btn-default"><i class="fa fa-download"></i> Descargar</button>
                 </div>
                 <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default disabled"><i class="fa fa-pencil"></i> Editar</button>
-                    <button type="button" class="btn btn-default disabled"><i class="fa fa-trash"></i> Borrar</button>
+                    @using (Html.BeginForm("DeleteMoreFiles", "FilesLibrary", FormMethod.Post, htmlAttributes: new { @Id = "frmShareFiles" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <input id="seleccionadosBorrar" name="seleccionadosBorrar" hidden />
+                        <button id="borrarArchivos" type="submit" class="btn btn-default"><i class="fa fa-trash"></i> Borrar</button>
+
+                    }
+                </div>
+            </div><!-- btn-toolbar -->
+            <div class="btn-toolbar btn-toolbar-media-manager pull-left" role="toolbar">
+                <div class="btn-group" role="group">
+                    <a href="@Url.Action("Index", "FilesLibrary", new { tipo = "todo" })" class="btn btn-default"> Todo</a>
+                    <a href="@Url.Action("Index", "FilesLibrary", new { tipo = "imagenes" })" class="btn btn-default"> Imágenes</a>
+                    <a href="@Url.Action("Index", "FilesLibrary", new { tipo = "pdf" })" class="btn btn-default"> PDF</a>
+                    <a href="@Url.Action("Index", "FilesLibrary", new { tipo = "documentos" })" class="btn btn-default"> Documentos</a>
+                    <a href="@Url.Action("Index", "FilesLibrary", new { tipo = "audio" })" class="btn btn-default"> Audio</a>
                 </div>
             </div><!-- btn-toolbar -->
 
-            <div class="btn-group pull-right" data-toggle="buttons">
-                <label class="btn btn-default-active active">
-                    <input type="checkbox" checked> Todo
-                </label>
-                <label class="btn btn-default-active">
-                    <input type="checkbox"> Imagenes
-                </label>
-                <label class="btn btn-default-active">
-                    <input type="checkbox"> Videos
-                </label>
-                <label class="btn btn-default-active">
-                    <input type="checkbox"> Documentos
-                </label>
-                <label class="btn btn-default-active">
-                    <input type="checkbox"> Sonido
-                </label>
-            </div>
         </div>
 
         <div class="row filemanager">
@@ -45,7 +48,7 @@
                 <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 video">
                     <div class="thmb">
                         <label class="ckbox">
-                            <input type="checkbox"><span></span>
+                            <input type="checkbox" name="archivo" value="@elemento.Id"><span></span>
                         </label>
                         <div class="btn-group fm-group">
                             <button type="button" class="btn btn-default dropdown-toggle fm-toggle" data-toggle="dropdown">
@@ -105,6 +108,7 @@
         <div class="fm-sidebar">
 
             
+            
             <a class="btn btn-danger btn-quirk btn-block mb20"  href="@Url.Action("UploadFile", "FilesLibrary")">Subir Archivo</a>
 
             <br>
@@ -128,6 +132,21 @@
         if (message != "") {
             showMessageJS(message);
         }
+
+
+        $('#compartirArchivos').click(function () {
+            var checkValues = $('input[name=archivo]:checked').map(function () {
+                return $(this).val();
+            }).get();
+            $('#seleccionados').val(checkValues);
+        });
+
+        $('#borrarArchivos').click(function () {
+            var checkValues = $('input[name=archivo]:checked').map(function () {
+                return $(this).val();
+            }).get();
+            $('#seleccionadosBorrar').val(checkValues);
+        });
 
         jQuery('.thmb').hover(function () {
             var t = jQuery(this);
