--- a/EduClass.Web/Views/Menu/_menuVertical.cshtml
+++ b/EduClass.Web/Views/Menu/_menuVertical.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using EduClass.Web.Infrastructure.Sessions;
+@using EduClass.Entities;
 <div class="tab-pane active" id="mainmenu">
     <h5 class="sidebar-title">Menú Principal</h5>
     <ul class="nav nav-pills nav-stacked nav-quirk">
@@ -10,7 +11,10 @@
         <li><a href="@Url.Action("Index", "Events")"><i class="fa fa-calendar"></i> <span>Eventos</span></a></li>
         <li><a href="@Url.Action("Index", "Pages")"><i class="fa fa-weibo"></i> <span>Páginas Publicas</span></a></li>
         <li><a href="@Url.Action("Index", "Tests")"><i class="fa fa-paperclip"></i> <span>Pruebas Diagnosticas</span></a></li>
-        <li><a href="@Url.Action("Index", "Califications")"><i class="fa fa-sort-numeric-asc"></i> <span>Calificaciones</span></a></li>
+        @if (UserSession.GetCurrentUser() is Teacher)
+        {
+            <li><a href="@Url.Action("Index", "Califications")"><i class="fa fa-sort-numeric-asc"></i> <span>Calificaciones</span></a></li>
+        }
     </ul>
 
    
