--- a/EduClass.Web/Views/UserMailer/Welcome.cshtml
+++ b/EduClass.Web/Views/UserMailer/Welcome.cshtml
@@ -1,2 +1,4 @@
+<p>Su ususario ha sido creado correctamente</p>
+<p>Haga click en el siguiente Link para completar la Activacion.</p>
 
-HTML View for UserMailer#Welcome
+<a href="@ViewBag.urlPerson">@ViewBag.urlPerson</a>
