--- a/EduClass.Web/Views/Mail/SendEmail.cshtml
+++ b/EduClass.Web/Views/Mail/SendEmail.cshtml
@@ -55,7 +55,7 @@
         }
     </div>
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Volver", "Index")
     </div>
 </div>
 @Scripts.Render("~/bundles/jquery")
