--- a/EduClass.Web/Views/Shared/_Layout.cshtml
+++ b/EduClass.Web/Views/Shared/_Layout.cshtml
@@ -36,6 +36,12 @@
             height: 128px;
 
         }
+
+        #imgAvatarBoard {
+            width: 48px;
+            height: 48px;
+
+        }
     </style>
 </head>
 <body>
