--- a/EduClass.Web/Views/Users/Me.cshtml
+++ b/EduClass.Web/Views/Users/Me.cshtml
@@ -86,7 +86,7 @@
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img alt="" src="@Url.Content(UserSession.GetCurrentUser().Avatar.UrlPhoto)" class="media-object img-circle">
+                                            <img alt="" id="imgAvatarBoard" src="@Url.Content(UserSession.GetCurrentUser().Avatar.UrlPhoto)" class="media-object img-circle">
                                         </a>
                                     </div>
                                     <div class="media-body">
