--- a/EduClass.Web/Views/FilesLibrary/Index.cshtml
+++ b/EduClass.Web/Views/FilesLibrary/Index.cshtml
@@ -82,7 +82,7 @@
                                 {
                                     @Html.AntiForgeryToken()
                                     <li><input type="hidden" name="fileId" value="@elemento.Id" /></li>
-                                    <li><button type="submit" class="btn btn-link"><i class="fa fa-trash"></i>Borrar</button> </li>
+                                    <li><button type="submit" onclick="return confirm('Esta accion borrara tambien los Post asociados, esta seguro?');" class="btn btn-link"><i class="fa fa-trash"></i>Borrar</button> </li>
                                 }
                             </ul>
                         </div><!-- btn-group -->
@@ -119,6 +119,10 @@
             
             
             <a class="btn btn-danger btn-quirk btn-block mb20"  href="@Url.Action("UploadFile", "FilesLibrary")">Subir Archivo</a>
+
+            <br>
+
+            <a class="btn btn-success btn-quirk btn-block mb20" href="@Url.Action("Connect", "FilesLibrary")">Conectar Dropbox</a>
 
             <br>
             
