--- a/EduClass.Web/Views/UserMailer/PasswordReset.cshtml
+++ b/EduClass.Web/Views/UserMailer/PasswordReset.cshtml
@@ -1,4 +1,5 @@
 
-HTML View for UserMailer#PasswordReset
+<p>Su contraseña esta lista para ser reseteada</p>
+<p>Haga click en el siguiente Link para completar el resteo.</p>
 
 <a href="@ViewBag.UrlReset">@ViewBag.UrlReset</a>
