--- a/EduClass.Web/Views/Users/EmailUrlResetPassword.cshtml
+++ b/EduClass.Web/Views/Users/EmailUrlResetPassword.cshtml
@@ -1,30 +1,38 @@
-﻿@{ Layout = "_SimpleLayout"; }
+﻿@model EduClass.Web.Infrastructure.ViewModels.ChangePasswordViewModel
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-    if (!(bool)ViewBag.Sended)
-    {
-        <div class="form-group mb10">
-            <div class="input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                <input type="email" class="form-control" name="email" placeholder="juan@ejemplo.com" value="" />
-            </div>
-        </div>
-        <div class="form-group mb10">
-            <div class="input-group">
-                <input type="submit" class="btn btn-primary" value="Resetear contraseña" />
-            </div>
-        </div>
-
-    }
-    else
-    {
-        <div class="form-group mb10">
-            <div class="alert alert-success">
-                <p>Te hemos enviado un correo electrónico para que resetees tu contraseña</p>
-            </div>
-        </div>
-    }
+@{
+    ViewBag.Title = "Resetear Contraseña";
+    Layout = "~/Views/Shared/_SimpleLayout.cshtml";
 }
+
+
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.NewPassword, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.NewPassword, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.NewPassword, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.ConfirmNewPassword, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.ConfirmNewPassword, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.ConfirmNewPassword, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Guardar" class="btn btn-success" />
+                    </div>
+                </div>
+
+        }
