--- a/EduClass.Web/Views/Users/Register.cshtml
+++ b/EduClass.Web/Views/Users/Register.cshtml
@@ -118,19 +118,20 @@
         </div>
         <div class="col-sm-6">
             <div class="sign-sidebar">
-                <h3 class="signtitle mb20">Texto de ejemplo</h3>
-                <p>Habla de lo maravilloso que es Educlass</p>
-                <p>It's amazing</p>
+                <h3 class="signtitle mb20">Información</h3>
+                <p>Edu.Class es una plataforma sencilla y dinámica  para el manejo de una clase y su profesor.</p>
+                <p>Prueba Edu.Class, es gratis!</p>
+
 
                 <br>
 
                 <h4 class="reason">1. Profesor</h4>
-                <p>Beneficions para el profesor</p>
-
+                <p>Podrás crear tus propios grupos y administrarlos. Además de compartir publicaciones con archivos adjuntos entre los alumnos de cualquiera de tus grupos.</p>
+                <p>Edu.Class permite manejo de Eventos creados por el profesor, para planificar una fecha de entrega, un Examen o una notificación que le interese a sus alumnos en un día determinado</p>
                 <br>
 
                 <h4 class="reason">2. Estudiante</h4>
-                <p>Beneficios para el estudiante</p>
+                <p>Cada Alumno podrá enviar mensajes entre profesores y compañeros de clases. Descargar los archivos del profesor y enterarse de todas sus novedades del grupo</p>
 
                 <hr class="invisible">
 
