--- a/EduClass.Web/Views/Users/SignIn.cshtml
+++ b/EduClass.Web/Views/Users/SignIn.cshtml
@@ -58,7 +58,7 @@
                         <input type="password" class="form-control" name="password" placeholder="Ingresa tu contraseña">
                     </div>
                 </div>
-                <div><a href="@Url.Action("EmailUrlResetPassword", "Users")" class="forgot">¿Olvidé mi contraseña?</a></div>
+                <div><a href="@Url.Action("ResetPasswordEmail", "Users")" class="forgot">¿Olvidé mi contraseña?</a></div>
                 <div class="form-group">
                     <button class="btn btn-success btn-quirk btn-block">Inícia sesión</button>
                 </div>
