--- a/EduClass.Web/Views/Events/Index.cshtml
+++ b/EduClass.Web/Views/Events/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using EduClass.Entities
+@using EduClass.Web.Infrastructure.Sessions
 @{
     ViewBag.Title = "Index";
 }
@@ -9,12 +10,14 @@
     <link href="~/Content/fullcalendar.min.css" rel="stylesheet" />
     <link href="~/Content/fullcalendar.print.css" rel="stylesheet" media='print' />
 }
-
+@if (UserSession.GetCurrentUser() is Teacher)
+{
 <div class="row">
     <div class="col-md-1 pull-right">
         <button type="button" class="btn btn-primary pull-right" style="margin: 5px" data-toggle="modal" data-target="#modalEventView">Agregar evento</button>
     </div>
 </div>
+}
 <div id='calendar'></div>
 
 <!--MODAL VIEW EVENT-->
