--- a/EduClass.Web/Views/Mail/SendEmail.cshtml
+++ b/EduClass.Web/Views/Mail/SendEmail.cshtml
@@ -87,7 +87,9 @@
         // HTML5 WYSIWYG Editor
         $('#wysiwyg').wysihtml5({
             toolbar: {
-                fa: true
+                fa: true,
+                "image": false,
+                "link": false
             }
         });
 
