--- a/EduClass.Web/Views/Menu/_menuTop.cshtml
+++ b/EduClass.Web/Views/Menu/_menuTop.cshtml
@@ -50,7 +50,7 @@
     <div class="header-right">
 
         <ul class="headermenu">
-            <li>
+            <li class="hidden">
                 <div id="noticePanel" class="btn-group">
                     <button class="btn btn-notice alert-notice" data-toggle="dropdown">
                         <i class="fa fa-globe"></i>
@@ -221,7 +221,7 @@
                     <ul class="dropdown-menu pull-right">
                         <li><a href="@Url.Action("Me", "Users")"><i class="glyphicon glyphicon-user"></i> Mi Perfil</a></li>
                         <li><a href="@Url.Action("Edit","Users")"><i class="glyphicon glyphicon-cog"></i> Preferencias de Cuenta</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-question-sign"></i> Ayuda</a></li>
+                        <li><a href="@Url.Action("ViewFaq","Faq")"><i class="glyphicon glyphicon-question-sign"></i> Ayuda</a></li>
                         <li><a href="@Url.Action("SignOut", "Users")"><i class="glyphicon glyphicon-log-out"></i> Cerrar Sesión</a></li>
                     </ul>
                 </div>
