--- a/EduClass.Web/Views/Menu/_menuVertical.cshtml
+++ b/EduClass.Web/Views/Menu/_menuVertical.cshtml
@@ -6,17 +6,20 @@
         <li class="active"><a href="@Url.Action("Index", "Board")"><i class="fa fa-home"></i> <span>Dashboard</span></a></li>
         <li><a href="@Url.Action("Index", "Mail")"><i class="fa fa-inbox"></i> <span>Mensajes</span></a></li>
         <li><a href="@Url.Action("Index", "Groups")"><i class="fa fa-users"></i> <span>Grupos</span></a></li>
-        <li><a href="@Url.Action("Index", "FilesLibrary")"><i class="fa fa-folder"></i> <span>Mis Archivos</span></a></li>
+        @if (UserSession.GetCurrentUser() is Teacher)
+        {
+            <li><a href="@Url.Action("Index", "FilesLibrary")"><i class="fa fa-folder"></i> <span>Mis Archivos</span></a></li>
+        }
         <li><a href="@Url.Action("GetContacts", "Groups")"><i class="fa fa-book"></i> <span>Contactos</span></a></li>
         <li><a href="@Url.Action("Index", "Events")"><i class="fa fa-calendar"></i> <span>Eventos</span></a></li>
-        <li><a href="@Url.Action("Index", "Pages")"><i class="fa fa-weibo"></i> <span>Páginas Publicas</span></a></li>
+        <li><a href="@Url.Action("Index", "Pages")"><i class="fa fa-weibo"></i> <span>Páginas Públicas</span></a></li>
         <li><a href="@Url.Action("Index", "Tests")"><i class="fa fa-paperclip"></i> <span>Pruebas Diagnosticas</span></a></li>
         @if (UserSession.GetCurrentUser() is Teacher)
         {
             <li><a href="@Url.Action("Index", "Califications")"><i class="fa fa-sort-numeric-asc"></i> <span>Calificaciones</span></a></li>
         }
         <li class="nav-parent" >
-            <a href=""><i class="fa fa-list-alt"></i> <span>Mis Grupos</span></a>
+            <a href=""><i class="fa fa-list-alt"></i> <span>Listado de Grupos</span></a>
             <ul class="children" id="gruposDDLVertical">
                 @try
                 {
