--- a/EduClass.Web/Views/Pages/Edit.cshtml
+++ b/EduClass.Web/Views/Pages/Edit.cshtml
@@ -73,7 +73,9 @@
         // HTML5 WYSIWYG Editor
         $('#wysiwyg').wysihtml5({
             toolbar: {
-                fa: true
+                fa: true,
+                "image": false,
+                "link": false
             }
         });
 
