--- a/EduClass.Web/Views/Groups/GetContacts.cshtml
+++ b/EduClass.Web/Views/Groups/GetContacts.cshtml
@@ -119,7 +119,8 @@
                 </div><!-- row -->
 
             </div><!-- col-sm-8 -->
-
+@if (ViewBag.urlTeacher != "" || ViewBag.nombreTeacher != "")
+{
             <div class="col-sm-4 col-md-3 col-lg-2">
                 <div class="panel">
                     <div class="panel-heading">
@@ -130,7 +131,9 @@
                             <li class="media">
                                 <div class="media-left">
                                     <a href="#">
-                                        <img class="media-object img-circle" src="@Url.Content(ViewBag.urlTeacher)" alt="">
+                                       
+                                            <img class="media-object img-circle" src="@Url.Content(ViewBag.urlTeacher)" alt="">
+                                       
                                     </a>
                                 </div>
                                 <div class="media-body">
@@ -143,7 +146,7 @@
                 </div>
             </div>
 
-           
+}
         </div><!-- row -->
 
     </div><!-- contentpanel -->
